--- a/css/style.css
+++ b/css/style.css
@@ -387,7 +387,7 @@ a:focus {
     margin-bottom: 45px;
     padding: 90px 0;
     text-align: center;
-    background: #fdbe33;
+    background: #e0e0e0; /* Changed */
 }
 
 .page-header h2 {
@@ -464,6 +464,7 @@ a:focus {
 }
 
 
+
 /*******************************/
 /******* Section Header ********/
 /*******************************/
@@ -508,7 +509,7 @@ a:focus {
     
 .feature .col-md-12:nth-child(2n) {
     color: #030f27;
-    background: #fdbe33;
+    background: #e0e0e0; /* Changed */
 }
 
 .feature .feature-item {
@@ -552,13 +553,13 @@ a:focus {
 }
 
 .feature .col-md-12:nth-child(2n) .feature-icon::after {
-    background: #fdbe33;
+    background: #e0e0e0; /* Changed */
 }
 
 .feature .feature-icon [class^="flaticon-"]::before {
     position: relative;
     margin: 0;
-    color: #fdbe33;
+    color: #e0e0e0; /* Changed */
     font-size: 60px;
     line-height: 60px;
     z-index: 3;
@@ -570,14 +571,14 @@ a:focus {
 
 .feature .feature-text h3 {
     margin: 0 0 10px 0;
-    color: #fdbe33;
+    color: #e0e0e0; /* Changed */
     font-size: 25px;
     font-weight: 600;
 }
 
 .feature .feature-text p {
     margin: 0;
-    color: #fdbe33;
+    color: #e0e0e0; /* Changed */
     font-size: 18px;
     font-weight: 400;
 }
@@ -587,6 +588,7 @@ a:focus {
 .feature .col-md-12:nth-child(2n) p {
     color: #030f27;
 }
+
 
 
 /*******************************/
@@ -626,12 +628,12 @@ a:focus {
     letter-spacing: 1px;
     color: #030f27;
     border-radius: 0;
-    background: #fdbe33;
+    background: #e0e0e0; /* Changed */
     transition: .3s;
 }
 
 .about .about-text a.btn:hover {
-    color: #fdbe33;
+    color: #e0e0e0; /* Changed */
     background: #030f27;
 }
 
@@ -641,6 +643,7 @@ a:focus {
         height: auto;
     }
 }
+
 
 
 /*******************************/
@@ -670,7 +673,7 @@ a:focus {
     margin: 0;
     font-size: 60px;
     line-height: 60px;
-    background-image: linear-gradient(#ffffff, #fdbe33);
+    background-image: linear-gradient(#ffffff, #e0e0e0); /* Changed */
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
@@ -698,18 +701,19 @@ a:focus {
 }
 
 .fact .fact-left {
-    color: #fdbe33;
+    color: #e0e0e0; /* Changed */
     background: #030f27;
 }
 
 .fact .fact-right {
     color: #030f27;
-    background: #fdbe33;
+    background: #e0e0e0; /* Changed */
 }
 
 .fact .fact-left h2 {
-    color: #fdbe33;
+    color: #e0e0e0; /* Changed */
 }
+
 
 
 /*******************************/
@@ -777,7 +781,7 @@ a:focus {
     width: calc(100% - 60px);
     font-size: 20px;
     font-weight: 700;
-    color: #fdbe33;
+    color: #e0e0e0; /* Changed */
     text-align: left;
     overflow: hidden;
     white-space: nowrap;
@@ -795,7 +799,7 @@ a:focus {
     line-height: 60px;
     font-weight: 100;
     color: #030f27;
-    background: #fdbe33;
+    background: #e0e0e0; /* Changed */
     border-radius: 0;
     transition: .3s;
 }
@@ -803,6 +807,7 @@ a:focus {
 .service .service-item:hover a.btn {
     color: #ffffff;
 }
+
 
 
 /*******************************/
@@ -846,7 +851,7 @@ a:focus {
     display: block;
     width: 100px;
     height: 100px;
-    background: #fdbe33;
+    background: #e0e0e0; /* Changed to #e0e0e0 */
     border-radius: 50%;
     animation: pulse-border 1500ms ease-out infinite;
 }
@@ -861,13 +866,13 @@ a:focus {
     display: block;
     width: 100px;
     height: 100px;
-    background: #fdbe33;
+    background: #e0e0e0; /* Changed to #e0e0e0 */
     border-radius: 50%;
     transition: all 200ms;
 }
 
 .video .btn-play:hover:after {
-    background-color: darken(#fdbe33, 10%);
+    background-color: #c0c0c0; /* Darkened version of #e0e0e0 */
 }
 
 .video .btn-play img {
@@ -960,7 +965,7 @@ a:focus {
 .team .team-text h2 {
     font-size: 20px;
     font-weight: 600;
-    color: #fdbe33;
+    color: #e0e0e0; /* Changed to #e0e0e0 */
     transition: .5s;
 }
 
@@ -970,7 +975,7 @@ a:focus {
 }
 
 .team .team-item:hover .team-text {
-    background: #fdbe33;
+    background: #e0e0e0; /* Changed to #e0e0e0 */
 }
 
 .team .team-item:hover .team-text h2 {
@@ -1025,6 +1030,7 @@ a:focus {
 }
 
 
+
 /*******************************/
 /*********** FAQs CSS **********/
 /*******************************/
@@ -1045,7 +1051,7 @@ a:focus {
     height: 100%;
     top: 0;
     left: calc(50% - .5px);
-    background: #fdbe33;
+    background: #e0e0e0; /* Changed to #e0e0e0 */
 }
 
 .faqs #accordion-1 {
@@ -1099,14 +1105,14 @@ a:focus {
 }
 
 .faqs .card-header [data-toggle="collapse"][aria-expanded="true"] {
-    background: #fdbe33;
+    background: #e0e0e0; /* Changed to #e0e0e0 */
 }
 
 .faqs .card-header [data-toggle="collapse"]:after {
     font-family: 'font Awesome 5 Free';
     content: "\f067";
     float: right;
-    color: #fdbe33;
+    color: #e0e0e0; /* Changed to #e0e0e0 */
     font-size: 12px;
     font-weight: 900;
     transition: .5s;
@@ -1203,7 +1209,7 @@ a:focus {
 }
 
 .testimonial .testimonial-slider h3 {
-    color: #fdbe33;
+    color: #e0e0e0; /* Changed to #e0e0e0 */
     font-size: 22px;
     font-weight: 700;
 }
@@ -1225,6 +1231,7 @@ a:focus {
     box-sizing: border-box;
     padding: 0 15px;
 }
+
 
 
 /*******************************/
@@ -1268,7 +1275,7 @@ a:focus {
     width: calc(100% - 60px);
     font-size: 18px;
     font-weight: 700;
-    color: #fdbe33;
+    color: #e0e0e0; /* Changed to #e0e0e0 */
     text-align: left;
     overflow: hidden;
     white-space: nowrap;
@@ -1286,7 +1293,7 @@ a:focus {
     line-height: 60px;
     font-weight: 100;
     color: #030f27;
-    background: #fdbe33;
+    background: #e0e0e0; /* Changed to #e0e0e0 */
     border-radius: 0;
     transition: .3s;
 }
@@ -1308,7 +1315,7 @@ a:focus {
     height: 1px;
     left: calc(50% - 50px);
     bottom: 0;
-    background: #fdbe33;
+    background: #e0e0e0; /* Changed to #e0e0e0 */
 }
 
 .blog .blog-meta p {
@@ -1339,18 +1346,19 @@ a:focus {
 .blog .pagination .page-link {
     color: #030f27;
     border-radius: 0;
-    border-color: #fdbe33;
+    border-color: #e0e0e0; /* Changed to #e0e0e0 */
 }
 
 .blog .pagination .page-link:hover,
 .blog .pagination .page-item.active .page-link {
-    color: #fdbe33;
+    color: #e0e0e0; /* Changed to #e0e0e0 */
     background: #030f27;
 }
 
 .blog .pagination .disabled .page-link {
     color: #999999;
 }
+
 
 
 /*******************************/
@@ -1388,7 +1396,7 @@ a:focus {
 }
 
 .single .single-tags a:hover {
-    color: #fdbe33;
+    color: #e0e0e0; /* Changed from #fdbe33 to #e0e0e0 */
     background: #030f27;
 }
 
@@ -1503,14 +1511,14 @@ a:focus {
     align-items: center;
     justify-content: center;
     color: #030f27;
-    background: #fdbe33;
+    background: #e0e0e0; /* Changed from #fdbe33 to #e0e0e0 */
     font-size: 16px;
     transition: .3s;
 }
 
 .single .related-slider .owl-nav .owl-prev:hover,
 .single .related-slider .owl-nav .owl-next:hover {
-    color: #fdbe33;
+    color: #e0e0e0; /* Changed from #fdbe33 to #e0e0e0 */
     background: #030f27;
 }
 
@@ -1574,7 +1582,7 @@ a:focus {
 }
 
 .single .comment-text .btn:hover {
-    background: #fdbe33;
+    background: #e0e0e0; /* Changed from #fdbe33 to #e0e0e0 */
 }
 
 .single .comment-form {
@@ -1604,13 +1612,14 @@ a:focus {
 .single .comment-form .btn {
     padding: 15px 30px;
     color: #030f27;
-    background: #fdbe33;
+    background: #e0e0e0; /* Changed from #fdbe33 to #e0e0e0 */
 }
 
 .single .comment-form .btn:hover {
-    color: #fdbe33;
+    color: #e0e0e0; /* Changed from #fdbe33 to #e0e0e0 */
     background: #030f27;
 }
+
 
 
 /**********************************/
@@ -1647,7 +1656,7 @@ a:focus {
     height: 2px;
     bottom: 0;
     left: 0;
-    background: #fdbe33;
+    background: #e0e0e0; /* Changed yellow to #e0e0e0 */
 }
 
 .sidebar .sidebar-widget .search-widget {
@@ -1671,7 +1680,7 @@ a:focus {
     height: 40px;
     padding: 0;
     font-size: 25px;
-    color: #fdbe33;
+    color: #e0e0e0; /* Changed yellow to #e0e0e0 */
     background: none;
     border-radius: 0;
     border: none;
@@ -1691,7 +1700,7 @@ a:focus {
 }
 
 .sidebar .tab-post .nav.nav-pills .nav-link {
-    color: #fdbe33;
+    color: #e0e0e0; /* Changed yellow to #e0e0e0 */
     background: #030f27;
     border-radius: 0;
 }
@@ -1699,7 +1708,7 @@ a:focus {
 .sidebar .tab-post .nav.nav-pills .nav-link:hover,
 .sidebar .tab-post .nav.nav-pills .nav-link.active {
     color: #030f27;
-    background: #fdbe33;
+    background: #e0e0e0; /* Changed yellow to #e0e0e0 */
 }
 
 .sidebar .tab-post .tab-content {
@@ -1739,7 +1748,7 @@ a:focus {
     content: '\f105';
     font-family: 'Font Awesome 5 Free';
     font-weight: 900;
-    color: #fdbe33;
+    color: #e0e0e0; /* Changed yellow to #e0e0e0 */
     left: 1px;
 }
 
@@ -1764,7 +1773,7 @@ a:focus {
 }
 
 .single .tag-widget a:hover {
-    color: #fdbe33;
+    color: #e0e0e0; /* Changed yellow to #e0e0e0 */
     background: #030f27;
 }
 
@@ -1811,7 +1820,7 @@ a:focus {
     font-weight: 500;
     text-transform: uppercase;
     border-radius: 0;
-    background: #fdbe33;
+    background: #e0e0e0; /* Changed yellow to #e0e0e0 */
     border: none;
     transition: .3s;
 }
@@ -1819,7 +1828,7 @@ a:focus {
 .portfolio #portfolio-flters li:hover,
 .portfolio #portfolio-flters li.filter-active {
     background: #030f27;
-    color: #fdbe33;
+    color: #e0e0e0; /* Changed yellow to #e0e0e0 */
 }
 
 .portfolio .load-more {
@@ -1833,7 +1842,7 @@ a:focus {
 }
 
 .portfolio .load-more .btn:hover {
-    color: #fdbe33;
+    color: #e0e0e0; /* Changed yellow to #e0e0e0 */
     background: #030f27;
 }
 
@@ -1898,7 +1907,7 @@ a:focus {
     width: calc(100% - 60px);
     font-size: 20px;
     font-weight: 700;
-    color: #fdbe33;
+    color: #e0e0e0; /* Changed yellow to #e0e0e0 */
     text-align: center;
     overflow: hidden;
     white-space: nowrap;
@@ -1923,8 +1932,9 @@ a:focus {
 
 .portfolio .portfolio-warp:hover a.btn {
     color: #ffffff;
-    background: #fdbe33;
+    background: #e0e0e0; /* Changed yellow to #e0e0e0 */
 }
+
 
 
 /*******************************/
@@ -1946,7 +1956,7 @@ a:focus {
 }
 
 .contact .col-md-6:last-child {
-    background: #fdbe33;
+    background: #b0b0b0; /* Changed to a darker shade */
 }
 
 .contact .contact-info {
@@ -1967,7 +1977,7 @@ a:focus {
 
 .contact .contact-item [class^="flaticon-"]::before {
     margin: 0;
-    color: #fdbe33;
+    color: #b0b0b0; /* Changed to a darker shade */
     font-size: 40px;
 }
 
@@ -1978,7 +1988,7 @@ a:focus {
 }
 
 .contact .contact-text h2 {
-    color: #fdbe33;
+    color: #b0b0b0; /* Changed to a darker shade */
     font-size: 20px;
     font-weight: 600;
 }
@@ -2022,23 +2032,23 @@ a:focus {
 }
 
 .contact .contact-form .form-control::placeholder {
-  color: #ffffff;
-  opacity: 1;
+    color: #ffffff;
+    opacity: 1;
 }
 
 .contact .contact-form .form-control::-ms-input-placeholder {
-  color: #ffffff;
+    color: #ffffff;
 }
 
 .contact .contact-form .form-control::-ms-input-placeholder {
-  color: #ffffff;
+    color: #ffffff;
 }
 
 .contact .contact-form .btn {
     padding: 16px 30px;
     font-size: 16px;
     font-weight: 600;
-    color: #fdbe33;
+    color: #b0b0b0; /* Changed to a darker shade */
     background: #030f27;
     border: none;
     border-radius: 0;
@@ -2057,6 +2067,7 @@ a:focus {
 }
 
 
+
 /*******************************/
 /********* Footer CSS **********/
 /*******************************/
@@ -2064,7 +2075,7 @@ a:focus {
     position: relative;
     margin-top: 45px;
     padding-top: 90px;
-    background: #030f27;
+    background: #030f27; /* Keeping the original background */
     color: #ffffff;
 }
 
@@ -2081,7 +2092,7 @@ a:focus {
     padding-bottom: 10px;
     font-size: 20px;
     font-weight: 600;
-    color: #fdbe33;
+    color: #b0b0b0; /* Darker header text */
 }
 
 .footer h2::after {
@@ -2091,13 +2102,13 @@ a:focus {
     height: 2px;
     left: 0;
     bottom: 0;
-    background: #fdbe33;
+    background: #b0b0b0; /* Darker underline color */
 }
 
 .footer .footer-link a {
     display: block;
     margin-bottom: 10px;
-    color: #ffffff;
+    color: #e0e0e0; /* Slightly lighter than the footer background */
     transition: .3s;
 }
 
@@ -2110,7 +2121,7 @@ a:focus {
 }
 
 .footer .footer-link a:hover {
-    color: #fdbe33;
+    color: #b0b0b0; /* Darker hover color */
     letter-spacing: 1px;
 }
 
@@ -2129,7 +2140,7 @@ a:focus {
     height: 40px;
     padding: 7px 0;
     text-align: center;
-    border: 1px solid rgba(256, 256, 256, .3);
+    border: 1px solid rgba(255, 255, 255, .3);
     border-radius: 60px;
     transition: .3s;
 }
@@ -2140,12 +2151,12 @@ a:focus {
 }
 
 .footer .footer-social a:hover {
-    background: #fdbe33;
-    border-color: #fdbe33;
+    background: #b0b0b0; /* Darker hover background */
+    border-color: #b0b0b0; /* Darker border color on hover */
 }
 
 .footer .footer-social a:hover i {
-    color: #030f27;
+    color: #030f27; /* Original background color */
 }
 
 .footer .newsletter .form {
@@ -2156,7 +2167,7 @@ a:focus {
 
 .footer .newsletter input {
     height: 50px;
-    border: 2px solid #121518;
+    border: 2px solid #333; /* Darker border */
     border-radius: 0;
 }
 
@@ -2169,16 +2180,16 @@ a:focus {
     font-size: 14px;
     font-weight: 500;
     text-transform: uppercase;
-    color: #fdbe33;
-    background: #121518;
+    color: #030f27; /* Dark button text */
+    background: #b0b0b0; /* Darker button background */
     border-radius: 0;
-    border: 2px solid #fdbe33;
+    border: 2px solid #b0b0b0; /* Darker border */
     transition: .3s;
 }
 
 .footer .newsletter .btn:hover {
-    color: #121518;
-    background: #fdbe33;
+    color: #ffffff; /* Lighter text on hover */
+    background: #e0e0e0; /* Lighter hover background */
 }
 
 .footer .footer-menu .f-menu {
@@ -2186,12 +2197,12 @@ a:focus {
     padding: 15px 0;
     font-size: 0;
     text-align: center;
-    border-top: 1px solid rgba(256, 256, 256, .1);
-    border-bottom: 1px solid rgba(256, 256, 256, .1);
+    border-top: 1px solid rgba(255, 255, 255, .1);
+    border-bottom: 1px solid rgba(255, 255, 255, .1);
 }
 
 .footer .footer-menu .f-menu a {
-    color: #ffffff;
+    color: #e0e0e0; /* Darker link color */
     font-size: 16px;
     margin-right: 15px;
     padding-right: 15px;
@@ -2199,7 +2210,7 @@ a:focus {
 }
 
 .footer .footer-menu .f-menu a:hover {
-    color: #fdbe33;
+    color: #b0b0b0; /* Darker hover link color */
 }
 
 .footer .footer-menu .f-menu a:last-child {
@@ -2208,14 +2219,13 @@ a:focus {
     border-right: none;
 }
 
-
 .footer .copyright {
     padding: 30px 15px;
 }
 
 .footer .copyright p {
     margin: 0;
-    color: #ffffff;
+    color: #e0e0e0; /* Darker copyright text */
 }
 
 .footer .copyright .col-md-6:last-child p {
@@ -2223,13 +2233,13 @@ a:focus {
 }
 
 .footer .copyright p a {
-    color: #fdbe33;
+    color: #b0b0b0; /* Darker link color */
     font-weight: 500;
     letter-spacing: 1px;
 }
 
 .footer .copyright p a:hover {
-    color: #ffffff;
+    color: #ffffff; /* Lighter on hover */
 }
 
 @media (max-width: 768px) {
